--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,4 +19,8 @@ layout: archive
   {% endfor %}
 </div>
 
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].about_me | default: "About me" }}</h3>
+
+Test
+
 {% include paginator.html %}
