--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,15 @@ layout: archive
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].about_me | default: "About me" }}</h3>
 
 I am a PhD student working at LISN, CNRS, Université Paris-Saclay. 
-I am honored to be advised by <a href="https://fyvo.github.io/"> François Yvon </a> and co-advised by <a href="https://caio-corro.fr/"> Caio Corro </a>.
+I am honored to be advised by <a href="https://fyvo.github.io/"> François Yvon</a> and co-advised by <a href="https://caio-corro.fr/">Caio Corro</a>.
 Before that, I received my Bachelor's degree in Computer Science and my Master's degree in Artificial Intelligence from Université Paris-Saclay.
 <br><br>
 My research interests lie in Natural Language Processing, especially in Semantic Parsing.
 
 
 <h3 id="publications" class="archive__subtitle">{{ site.data.ui-text[site.locale].publications | default: "Publications" }}</h3>
+
+<p class="smaller">
 
 <ul>
 	<li> 5. Structural generalization in COGS: Supertagging is (almost) all you need <br>
@@ -42,6 +44,8 @@ My research interests lie in Natural Language Processing, especially in Semantic
 		 <a href="https://www.aclanthology.org/2021.jeptalnrecital-taln.1"> paper </a>
 	</li>
 </ul>
+
+</p>
 
 <h3 id="experiences" class="archive__subtitle">{{ site.data.ui-text[site.locale].experiences | default: "Experiences" }}</h3>
 
