--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].about_me | default: "About me" }}</h3>
+<h2 class="archive__subtitle">{{ site.data.ui-text[site.locale].about_me | default: "About me" }}</h2>
 
 I am a PhD student working at LISN, CNRS, Université Paris-Saclay. 
 I am honored to be advised by <a href="https://fyvo.github.io/"> François Yvon</a> and co-advised by <a href="https://caio-corro.fr/">Caio Corro</a>.
@@ -13,7 +13,7 @@ Before that, I received my Bachelor's degree in Computer Science and my Master's
 My research interests lie in Natural Language Processing, especially in Semantic Parsing.
 
 
-<h3 id="publications" class="archive__subtitle">{{ site.data.ui-text[site.locale].publications | default: "Publications" }}</h3>
+<h2 id="publications" class="archive__subtitle">{{ site.data.ui-text[site.locale].publications | default: "Publications" }}</h2>
 
 <p class="archive__item-excerpt">
 
@@ -47,9 +47,18 @@ My research interests lie in Natural Language Processing, especially in Semantic
 
 </p>
 
-<h3 id="experiences" class="archive__subtitle">{{ site.data.ui-text[site.locale].experiences | default: "Experiences" }}</h3>
+<h2 id="experiences" class="archive__subtitle">{{ site.data.ui-text[site.locale].experiences | default: "Experiences" }}</h2>
 
-Todo
+<p class="archive__item-excerpt">
+
+<ul>
+	<li> 2021 - 2023, EACL Student Board member	</li>
+	<li> 2020 - present, PhD Student, LISN, CNRS, Université Paris-Saclay </li>
+	<li> 2020, Research Intern, LIMSI (now LISN), CNRS, Université Paris-Saclay </li>
+	<li> 2019, Research Intern, LRI (now LISN), Université Paris-Saclay </li>
+</ul>
+
+</p>
 
 
 
