--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ My research interests lie in Natural Language Processing, especially in Semantic
 	<li> 5. Structural generalization in COGS: Supertagging is (almost) all you need <br>
 		 <b> Alban Petit</b>, Caio Corro, François Yvon <br>
 		 EMNLP 2023 - Conference on Empirical Methods in Natural Language Processing <br>
-		 (to appear)
+		 <a href="https://arxiv.org/abs/2310.14124"> paper (arXiv) </a>
 	</li>
 	<li> 4. On graph-based reentrancy-free semantic parsing <br>
 		 <b> Alban Petit</b>, Caio Corro <br>
