Updated professional situation

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,11 @@ layout: archive
 
 <h2 class="archive__subtitle">{{ site.data.ui-text[site.locale].about_me | default: "About me" }}</h2>
 
-I am a PhD student working at LISN, CNRS, Université Paris-Saclay. 
-I am honored to be advised by <a href="https://fyvo.github.io/"> François Yvon</a> and co-advised by <a href="https://caio-corro.fr/">Caio Corro</a>.
+I am an AI Research Engineer at Konverso, working on Generative AI.
+I got my PhD from Université Paris-Saclay at the LISN lab.
+I was advised by <a href="https://fyvo.github.io/"> François Yvon</a> and co-advised by <a href="https://caio-corro.fr/">Caio Corro</a>.
 Before that, I received my Bachelor's degree in Computer Science and my Master's degree in Artificial Intelligence from Université Paris-Saclay.
 <br><br>
-My research interests lie in Natural Language Processing, especially in Semantic Parsing.
-
 
 <h2 id="publications" class="archive__subtitle">{{ site.data.ui-text[site.locale].publications | default: "Publications" }}</h2>
 
@@ -52,8 +51,9 @@ My research interests lie in Natural Language Processing, especially in Semantic
 <p class="archive__item-excerpt">
 
 <ul>
+	<li> 2024 - present, AI Research Engineer, Konverso </li>
 	<li> 2021 - 2023, EACL Student Board member	</li>
-	<li> 2020 - present, PhD Student, LISN, CNRS, Université Paris-Saclay </li>
+	<li> 2020 - 2024, PhD Student, LISN, CNRS, Université Paris-Saclay </li>
 	<li> 2020, Research Intern, LIMSI (now LISN), CNRS, Université Paris-Saclay </li>
 	<li> 2019, Research Intern, LRI (now LISN), Université Paris-Saclay </li>
 </ul>
