--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,30 +17,34 @@ Before that, I received my Bachelor's degree in Computer Science and my Master's
 <p class="archive__item-excerpt">
 
 <ul>
+	<li> PhD thesis : Structured prediction methods for semantic parsing <br>
+		 <b> Alban Petit</b><br>
+		 <a href="https://theses.hal.science/tel-04527227v1/document"> [link] </a>
+	</li>
 	<li> 5. Structural generalization in COGS: Supertagging is (almost) all you need <br>
 		 <b> Alban Petit</b>, Caio Corro, François Yvon <br>
 		 EMNLP 2023 - Conference on Empirical Methods in Natural Language Processing <br>
-		 <a href="https://aclanthology.org/2023.emnlp-main.69/"> paper </a>
+		 <a href="https://aclanthology.org/2023.emnlp-main.69/"> [link] </a>
 	</li>
 	<li> 4. On graph-based reentrancy-free semantic parsing <br>
 		 <b> Alban Petit</b>, Caio Corro <br>
 		 TACL 2023 - Transactions of the Association for Computational Linguistics <br>
-		 <a href="https://aclanthology.org/2023.tacl-1.41/"> paper </a>
+		 <a href="https://aclanthology.org/2023.tacl-1.41/"> [link] </a>
 	</li>
 	<li> 3. Un algorithme d'analyse sémantique fondée sur les graphes via le problème de l'arborescence généralisée couvrante <br>
 		 <b> Alban Petit</b>, Caio Corro <br>
 		 TALN 2022 - Conférence sur le Traitement Automatique des Langues Naturelles <br>
-		 <a href="https://aclanthology.org/2022.jeptalnrecital-taln.22"> paper </a>
+		 <a href="https://aclanthology.org/2022.jeptalnrecital-taln.22"> [link] </a>
 	</li>
 	<li> 2. Preventing posterior collapse in variational autoencoders for text generation via decoder regularization <br>
 		 <b> Alban Petit</b>, Caio Corro <br>
 		 NeurIPS 2021 Workshop - Deep Generative Models and Downstream Applications <br>
-		 <a href="https://www.arxiv.org/abs/2110.14945"> paper </a>
+		 <a href="https://www.arxiv.org/abs/2110.14945"> [link] </a>
 	</li>
 	<li> 1. Auto-encodeurs variationnels : contrecarrer le problème de posterior collapse grâce à la régularisation du décodeur <br>
 		 <b> Alban Petit</b>, Caio Corro <br>
 		 TALN 2021 - Conférence sur le Traitement Automatique des Langues Naturelles <br>
-		 <a href="https://www.aclanthology.org/2021.jeptalnrecital-taln.1"> paper </a>
+		 <a href="https://www.aclanthology.org/2021.jeptalnrecital-taln.1"> [link] </a>
 	</li>
 </ul>
 
