--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,8 +17,9 @@ Before that, I received my Bachelor's degree in Computer Science and my Master's
 <p class="archive__item-excerpt">
 
 <ul>
-	<li> PhD thesis : Structured prediction methods for semantic parsing <br>
+	<li> Structured prediction methods for semantic parsing <br>
 		 <b> Alban Petit</b><br>
+		 PhD thesis<br>
 		 <a href="https://theses.hal.science/tel-04527227v1/document"> [link] </a>
 	</li>
 	<li> 5. Structural generalization in COGS: Supertagging is (almost) all you need <br>
